# lsbench

./: CMakeLists.txt  README.md  config
libs/: amgx.cmake  cusparse.cmake  ginkgo.cmake  hypre.cmake  paralmond.cmake  rocalution.cmake  suitesparse.cmake
machines/: env-fronteir.sh
src/: amgx.c  cholbench-csr.c  cholbench-impl.h  cholbench.c  cholbench.h  cholmod-impl.h  cholmod.c  cusparse.c  ginkgo.cpp  hypre.c  lsbench-csr.c  lsbench-impl.h  lsbench.c  lsbench.h  paralmond.cpp
tests/: A0_02x02.txt  A1_02x02.txt  A_02x02.txt  I1_05x05.txt  L_02x02.txt  tj7a_A_12.txt  tj7a_A_15.txt  tj7a_A_18.txt  xn3b_A_10.txt  xn3b_A_12.txt  xn3b_A_15.txt  xn3b_A_18.txt
